# QuantPG

./: .gitignore  playground.ipynb
a_share_quant/: README.md  config.py  requirements.txt
a_share_quant/backtest/: engine.py
a_share_quant/data/: downloader.py  universe.py
a_share_quant/data/storage/processed/: feature_importance.csv  ic_series.csv  ic_series_OOS.csv  predictions_IS.parquet  predictions_OOS.parquet
a_share_quant/data/storage/raw/: benchmark_daily.parquet  daily_000001_hfq.parquet  daily_000002_hfq.parquet  daily_000063_hfq.parquet  daily_000100_hfq.parquet  daily_000157_hfq.parquet  daily_000166_hfq.parquet  daily_000301_hfq.parquet  daily_000333_hfq.parquet  daily_000338_hfq.parquet  daily_000408_hfq.parquet  daily_000425_hfq.parquet  daily_000538_hfq.parquet  daily_000568_hfq.parquet  daily_000596_hfq.parquet  daily_000617_hfq.parquet  daily_000625_hfq.parquet  daily_000630_hfq.parquet  daily_000651_hfq.parquet  daily_000661_hfq.parquet  daily_000708_hfq.parquet  daily_000725_hfq.parquet  daily_000768_hfq.parquet  daily_000776_hfq.parquet  daily_000786_hfq.parquet  daily_000792_hfq.parquet  daily_000807_hfq.parquet  daily_000858_hfq.parquet  daily_000876_hfq.parquet  daily_000895_hfq.parquet  daily_000938_hfq.parquet  daily_000963_hfq.parquet  daily_000975_hfq.parquet  (+269 more)
a_share_quant/factors/: base.py  factors.py
a_share_quant/model/: trainer.py
a_share_quant/notebooks/: research.ipynb
a_share_quant/results/: metrics.csv  monthly_returns.csv  portfolio_returns.csv
a_share_quant/scripts/: run_pipeline.py
quantpg/: main.py  pyproject.toml
