[project]
name = "quantpg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.49",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pandas-datareader>=0.10.0",
    "ruff>=0.15.8",
    "scikit-learn>=1.8.0",
    "yfinance>=1.2.0",
]
